<resources>
    <string name="app_name">PPP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_title">PC Builder</string>
    <string name="build_system">Build System</string>
    <string name="saved_builds">Saved Builds</string>
    <string name="components">Search Components</string>
    <string name="build_guide">Build Guide</string>
    <string name="select_product">Choose Part</string>
    <string name="back_button_description">BackButton</string>
    <string name="cpuLabel">CPU</string>
    <string name="cpuCoolerLabel">CPU Cooler</string>
    <string name="motherboardLabel">Motherboard</string>
    <string name="memoryLabel">Memory</string>
    <string name="storageLabel">Storage</string>
    <string name="gpuCoolerLabel">GPU</string>
    <string name="choose_part_psu_label">PSU</string>
    <string name="choose_part_case_label">Case</string>
    <string name="setting">Settings</string>
    <string name="country">Country</string>
    <string name="tax_rate">Tax Percentage</string>
    <string name="tax_percentage">Input your rate (%)</string>
    <string name="currency">Currency</string>
    <string name="usd">American Dollar $(USD)</string>
    <string name="eur">Euro \u20AC(EUR)</string>
    <string name="jpy">Japanese Yen \u00A5(JPY)</string>
    <string name="gbp">British Pound \u00A3 (GBP)</string>
    <string name="aud">Australian Dollar $(AUD)</string>
    <string name="cad">Canadian Dollar $(CAD)</string>
    <string name="chf">Swiss Franc \u20A3(CHF)</string>
    <string name="currency_disclaimer">These settings dont do anything but change the currency symbol at the moment</string>
    <string name="currency_warning">Warning!</string>
    <string name="update_settings">Update Settings</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="loading_data">Loading Data...</string>
    <string name="socket_label"><u>Socket</u></string>
    <string name="tdp_label"><u>TDP</u></string>
    <string name="clock_label"><u>Clock Speed</u></string>
    <string name="core_label"><u>Cores</u></string>
    <string name="price"><u>Price</u></string>
    <string name="amd">AMD</string>
    <string name="intel">Intel</string>
    <string name="brand_selection"><u>Brand</u></string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="buy_label">Buy</string>
    <string name="spec_label">Specifications</string>
    <string name="seller"><u>Seller</u></string>
    <string name="available"><u>Available</u></string>
    <string name="shipping"><u>Shipping</u></string>
    <string name="form_factor"><u>Form Factor</u></string>
    <string name="max_memory_label"><u>Max Memory</u></string>
    <string name="chipset_label"><u>Chipset</u></string>
    <string name="memory_label">Memory</string>
    <string name="memory_u_label"><u>Memory</u></string>
    <string name="socket_selection_label">Socket</string>
    <string name="memory_slot_label">Memory Slots</string>
    <string name="memory_speed_label">Memory Speed</string>
    <string name="form_factor_label">Form Factor</string>
    <string name="fan_speed_label"><u>Fan RPM</u></string>
    <string name="noise_label"><u>Noise Level</u></string>
    <string name="height_label"><u>Height</u></string>
    <string name="water_cooled_label"><u>Water Cooled</u></string>
    <string name="cooling_type_label">Cooling Type</string>
    <string name="water_cooled">Water</string>
    <string name="air">Air</string>
    <string name="price_gb_label"><u>Price / GB</u></string>
    <string name="modules_factor"><u>Modules</u></string>
    <string name="ecc_reg_label"><u>ECC</u></string>
    <string name="memory_speed_u_label"><u>Memory Speed</u></string>
    <string name="memory_modules_label">Number of Modules</string>
    <string name="price_pgb_label">Price / GB</string>
    <string name="ecc_label">Other</string>
    <string name="memory_per_mod_label">Memory / Module</string>
    <string name="heat_spreader">Heat Spreader</string>
    <string name="ecc_opt_label">ECC</string>
    <string name="non_ecc_opt_label">Non ECC</string>
    <string name="update_db">Updating Data</string>
    <string name="capacity_label"><u>Capactiy</u></string>
    <string name="type_label"><u>Type</u></string>
    <string name="nvme_label"><u>NVME</u></string>
    <string name="capacity">Capacity</string>
    <string name="nvme">NVME</string>
    <string name="type">Type</string>
    <string name="non_nvme">Non-NVME</string>
    <string name="length_label"><u>Length</u></string>
    <string name="wattage_u"><u>Wattage</u></string>
    <string name="eff_ratio_u"><u>Efficiency Rating</u></string>
    <string name="modular_u"><u>Modular</u></string>
    <string name="wattage_label">Wattage</string>
    <string name="eff_rating_selection">Efficiency Rating</string>
    <string name="tower_u"><u>Tower</u></string>
    <string name="psu_shroud_u"><u>PSU Shroud</u></string>
    <string name="side_panel_u"><u>Side Panel</u></string>
    <string name="max_gpu_len_u"><u>Max GPU Size</u></string>
    <string name="shroud_selection">PSU Shroud</string>
    <string name="side_panel_label">Side Panel</string>
    <string name="tower_label">Tower</string>
    <string name="choose_cpu"><u>CPU </u></string>
    <string name="price_total">Total Price</string>
    <string name="compatibility">Compatibility</string>
    <string name="choose_cpu_cooler">CPU Cooler</string>
    <string name="choose_motherboard">Motherboard</string>
    <string name="choose_memory">Memory</string>
    <string name="choose_storage">Storage</string>
    <string name="choose_gpu">GPU</string>
    <string name="choose_psu">Power Supply</string>
    <string name="choose_case">Case</string>
    <string name="base_price">Price</string>
    <string name="add_to_build">Add</string>
    <string name="save">Save Build</string>
    <string name="delete_build">Delete Build</string>
    <string name="new_build">New Build</string>
    <string name="parts"><u>Components</u></string>


</resources>