<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="75dp"
    android:paddingBottom="100dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:orientation="vertical"
    android:background="#66000000">

    <LinearLayout
        android:id="@+id/main_vert_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackground"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filters_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/filters" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/brand_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="5dp"
                android:gravity="center"
                android:background="#B34C4D7E"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/brand_selection" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    app:srcCompat="@drawable/drop_down_arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/brand_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textColor="#FFFFFF"
                    android:buttonTint="#FFFFFF"
                    android:checked="true"
                    android:text="@string/amd" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textColor="#FFFFFF"
                    android:buttonTint="#FFFFFF"
                    android:checked="true"
                    android:text="@string/intel" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/price_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="#B34C4D7E"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    app:srcCompat="@drawable/drop_down_arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/highprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#FFFFFF"
                android:paddingTop="3dp"
                android:paddingLeft="10dp"
                android:text="Maximum" />

            <SeekBar
                android:id="@+id/price_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:color="#FFFFFF"
                android:max="100"
                android:padding="5dp"
                android:progress="100000"
                android:progressBackgroundTint="#FFFFFF"
                android:progressTint="#FFFFFF"
                android:thumbTint="#E2E2E2" />

            
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>