<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_margin="5dp"
    android:padding="7dp"
    android:background="#B340445c"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".22"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_to_build"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:layout_margin="5dp"
            android:background="@drawable/build_part_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/add_to_build" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".78"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

    <ImageView
            android:id="@+id/product_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight=".3"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|center_horizontal"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back_button" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor = "#FFFFFF"
                    android:textSize ="16sp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorAccent"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/colorAccent"
                    android:rating="0"
                    android:secondaryProgressTint="@color/colorAccent"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/rating_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="(0)"
                    android:textColor="#CCFFFFFF" />

                <TextView
                    android:id="@+id/currency_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:paddingLeft="5dp"
                    android:text="$"
                    android:textColor="#CCFFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="15dp"
                    android:text="0.00"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="@string/memory_u_label"
                                android:textColor="#CCFFFFFF"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="@string/clock_label"
                                android:textColor="#CCFFFFFF"
                                android:textSize="16dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/memory_value"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="memory"
                                android:textColor="#FFFFFF"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/clock_value"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="clock"
                                android:textColor="#FFFFFF"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="@string/length_label"
                                android:textColor="#CCFFFFFF"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="@string/tdp_label"
                                android:textColor="#CCFFFFFF"
                                android:textSize="16dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight=".25"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/length_value"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="memory"
                                android:textColor="#FFFFFF"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tdp_value"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:text="chipset"
                                android:textColor="#FFFFFF"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>